qt6/gen_qlistwidget.nim

proc fQListWidget_connect_itemPressed(self: pointer, slot: int) {.importc: "QListWidget_connect_itemPressed".}
proc fcQListWidget_itemClicked(self: pointer, item: pointer): void {.importc: "QListWidget_itemClicked".}
proc fQListWidget_connect_itemClicked(self: pointer, slot: int) {.importc: "QListWidget_connect_itemClicked".}
proc fcQListWidget_itemDoubleClicked(self: pointer, item: pointer): void {.importc: "QListWidget_itemDoubleClicked".}
proc fQListWidget_connect_itemDoubleClicked(self: pointer, slot: int) {.importc: "QListWidget_connect_itemDoubleClicked".}
proc fcQListWidget_itemActivated(self: pointer, item: pointer): void {.importc: "QListWidget_itemActivated".}
proc fQListWidget_connect_itemActivated(self: pointer, slot: int) {.importc: "QListWidget_connect_itemActivated".}
proc fcQListWidget_itemEntered(self: pointer, item: pointer): void {.importc: "QListWidget_itemEntered".}
proc fQListWidget_connect_itemEntered(self: pointer, slot: int) {.importc: "QListWidget_connect_itemEntered".}
proc fcQListWidget_itemChanged(self: pointer, item: pointer): void {.importc: "QListWidget_itemChanged".}
proc fQListWidget_connect_itemChanged(self: pointer, slot: int) {.importc: "QListWidget_connect_itemChanged".}
proc fcQListWidget_currentItemChanged(self: pointer, current: pointer, previous: pointer): void {.importc: "QListWidget_currentItemChanged".}
proc fQListWidget_connect_currentItemChanged(self: pointer, slot: int) {.importc: "QListWidget_connect_currentItemChanged".}
proc fcQListWidget_currentTextChanged(self: pointer, currentText: struct_miqt_string): void {.importc: "QListWidget_currentTextChanged".}
proc fQListWidget_connect_currentTextChanged(self: pointer, slot: int) {.importc: "QListWidget_connect_currentTextChanged".}
proc fcQListWidget_currentRowChanged(self: pointer, currentRow: cint): void {.importc: "QListWidget_currentRowChanged".}
proc fQListWidget_connect_currentRowChanged(self: pointer, slot: int) {.importc: "QListWidget_connect_currentRowChanged".}
proc fcQListWidget_itemSelectionChanged(self: pointer, ): void {.importc: "QListWidget_itemSelectionChanged".}
proc fQListWidget_connect_itemSelectionChanged(self: pointer, slot: int) {.importc: "QListWidget_connect_itemSelectionChanged".}
proc fcQListWidget_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QListWidget_tr2".}
proc fcQListWidget_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QListWidget_tr3".}
proc fcQListWidget_sortItems1(self: pointer, order: cint): void {.importc: "QListWidget_sortItems1".}
proc fcQListWidget_scrollToItem2(self: pointer, item: pointer, hint: cint): void {.importc: "QListWidget_scrollToItem2".}
proc fQListWidget_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QListWidget_virtualbase_metacall".}
proc fcQListWidget_override_virtual_metacall(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_metacall".}
proc fQListWidget_virtualbase_setSelectionModel(self: pointer, selectionModel: pointer): void{.importc: "QListWidget_virtualbase_setSelectionModel".}
proc fcQListWidget_override_virtual_setSelectionModel(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_setSelectionModel".}
proc fQListWidget_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QListWidget_virtualbase_dropEvent".}
proc fcQListWidget_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_dropEvent".}
proc fQListWidget_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QListWidget_virtualbase_event".}
proc fcQListWidget_override_virtual_event(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_event".}
proc fQListWidget_virtualbase_mimeTypes(self: pointer, ): struct_miqt_array{.importc: "QListWidget_virtualbase_mimeTypes".}
proc fcQListWidget_override_virtual_mimeTypes(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_mimeTypes".}
proc fQListWidget_virtualbase_mimeData(self: pointer, items: struct_miqt_array): pointer{.importc: "QListWidget_virtualbase_mimeData".}
proc fcQListWidget_override_virtual_mimeData(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_mimeData".}
proc fQListWidget_virtualbase_dropMimeData(self: pointer, index: cint, data: pointer, action: cint): bool{.importc: "QListWidget_virtualbase_dropMimeData".}
proc fcQListWidget_override_virtual_dropMimeData(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_dropMimeData".}
proc fQListWidget_virtualbase_supportedDropActions(self: pointer, ): cint{.importc: "QListWidget_virtualbase_supportedDropActions".}
proc fcQListWidget_override_virtual_supportedDropActions(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_supportedDropActions".}
proc fQListWidget_virtualbase_visualRect(self: pointer, index: pointer): pointer{.importc: "QListWidget_virtualbase_visualRect".}
proc fcQListWidget_override_virtual_visualRect(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_visualRect".}
proc fQListWidget_virtualbase_scrollTo(self: pointer, index: pointer, hint: cint): void{.importc: "QListWidget_virtualbase_scrollTo".}
proc fcQListWidget_override_virtual_scrollTo(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_scrollTo".}
proc fQListWidget_virtualbase_indexAt(self: pointer, p: pointer): pointer{.importc: "QListWidget_virtualbase_indexAt".}
proc fcQListWidget_override_virtual_indexAt(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_indexAt".}
proc fQListWidget_virtualbase_doItemsLayout(self: pointer, ): void{.importc: "QListWidget_virtualbase_doItemsLayout".}
proc fcQListWidget_override_virtual_doItemsLayout(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_doItemsLayout".}
proc fQListWidget_virtualbase_reset(self: pointer, ): void{.importc: "QListWidget_virtualbase_reset".}
proc fcQListWidget_override_virtual_reset(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_reset".}
proc fQListWidget_virtualbase_setRootIndex(self: pointer, index: pointer): void{.importc: "QListWidget_virtualbase_setRootIndex".}
proc fcQListWidget_override_virtual_setRootIndex(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_setRootIndex".}
proc fQListWidget_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QListWidget_virtualbase_scrollContentsBy".}
proc fcQListWidget_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_scrollContentsBy".}
proc fQListWidget_virtualbase_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void{.importc: "QListWidget_virtualbase_dataChanged".}
proc fcQListWidget_override_virtual_dataChanged(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_dataChanged".}
proc fQListWidget_virtualbase_rowsInserted(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QListWidget_virtualbase_rowsInserted".}
proc fcQListWidget_override_virtual_rowsInserted(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_rowsInserted".}
proc fQListWidget_virtualbase_rowsAboutToBeRemoved(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QListWidget_virtualbase_rowsAboutToBeRemoved".}
proc fcQListWidget_override_virtual_rowsAboutToBeRemoved(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_rowsAboutToBeRemoved".}
proc fQListWidget_virtualbase_mouseMoveEvent(self: pointer, e: pointer): void{.importc: "QListWidget_virtualbase_mouseMoveEvent".}
proc fcQListWidget_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_mouseMoveEvent".}
proc fQListWidget_virtualbase_mouseReleaseEvent(self: pointer, e: pointer): void{.importc: "QListWidget_virtualbase_mouseReleaseEvent".}
proc fcQListWidget_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_mouseReleaseEvent".}
proc fQListWidget_virtualbase_wheelEvent(self: pointer, e: pointer): void{.importc: "QListWidget_virtualbase_wheelEvent".}
proc fcQListWidget_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_wheelEvent".}
proc fQListWidget_virtualbase_timerEvent(self: pointer, e: pointer): void{.importc: "QListWidget_virtualbase_timerEvent".}
proc fcQListWidget_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_timerEvent".}
proc fQListWidget_virtualbase_resizeEvent(self: pointer, e: pointer): void{.importc: "QListWidget_virtualbase_resizeEvent".}
proc fcQListWidget_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_resizeEvent".}
proc fQListWidget_virtualbase_dragMoveEvent(self: pointer, e: pointer): void{.importc: "QListWidget_virtualbase_dragMoveEvent".}
proc fcQListWidget_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_dragMoveEvent".}
proc fQListWidget_virtualbase_dragLeaveEvent(self: pointer, e: pointer): void{.importc: "QListWidget_virtualbase_dragLeaveEvent".}
proc fcQListWidget_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_dragLeaveEvent".}
proc fQListWidget_virtualbase_startDrag(self: pointer, supportedActions: cint): void{.importc: "QListWidget_virtualbase_startDrag".}
proc fcQListWidget_override_virtual_startDrag(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_startDrag".}
proc fQListWidget_virtualbase_initViewItemOption(self: pointer, option: pointer): void{.importc: "QListWidget_virtualbase_initViewItemOption".}
proc fcQListWidget_override_virtual_initViewItemOption(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_initViewItemOption".}
proc fQListWidget_virtualbase_paintEvent(self: pointer, e: pointer): void{.importc: "QListWidget_virtualbase_paintEvent".}
proc fcQListWidget_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_paintEvent".}
proc fQListWidget_virtualbase_horizontalOffset(self: pointer, ): cint{.importc: "QListWidget_virtualbase_horizontalOffset".}
proc fcQListWidget_override_virtual_horizontalOffset(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_horizontalOffset".}
proc fQListWidget_virtualbase_verticalOffset(self: pointer, ): cint{.importc: "QListWidget_virtualbase_verticalOffset".}
proc fcQListWidget_override_virtual_verticalOffset(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_verticalOffset".}
proc fQListWidget_virtualbase_moveCursor(self: pointer, cursorAction: cint, modifiers: cint): pointer{.importc: "QListWidget_virtualbase_moveCursor".}
proc fcQListWidget_override_virtual_moveCursor(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_moveCursor".}
proc fQListWidget_virtualbase_setSelection(self: pointer, rect: pointer, command: cint): void{.importc: "QListWidget_virtualbase_setSelection".}
proc fcQListWidget_override_virtual_setSelection(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_setSelection".}
proc fQListWidget_virtualbase_visualRegionForSelection(self: pointer, selection: pointer): pointer{.importc: "QListWidget_virtualbase_visualRegionForSelection".}
proc fcQListWidget_override_virtual_visualRegionForSelection(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_visualRegionForSelection".}
proc fQListWidget_virtualbase_selectedIndexes(self: pointer, ): struct_miqt_array{.importc: "QListWidget_virtualbase_selectedIndexes".}
proc fcQListWidget_override_virtual_selectedIndexes(self: pointer, slot: int) {.importc: "QListWidget_override_virtual_selectedIndexes".}
proc fQListWidget_virtualbase_updateGeometries(self: pointer, ): void{.importc: "QListWidget_virtualbase_updateGeometries".}
